"feat: add Railway deployment configuration"